# NGS-Barcode-Count

./: .gitignore  Cargo.toml  README.md  barcode.example.csv  building_block_barcode.example.csv  example.scheme.txt  sample_barcode.example.csv  scheme.example.txt
src/: arguments.rs  barcode_info.rs  del_info.rs  info.rs  input.rs  io.rs  lib.rs  main.rs  output.rs  parse.rs  parse_sequences.rs
