[package]
name = "barcode"
version = "0.5.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
regex = "1.5"
clap = "2.33.0"
itertools = "0.10"
num_cpus = "1.0"
flate2 = "1"
chrono = "0.4"
custom_error = "1.9"
