[package]
name = "barcode-count"
description = "NGS barcode counter for DEL, CRISPR-seq, and Barcode-seq"
version = "0.8.7"
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
keyword = ["DEL", "CRISPR-seq", "Barcode-seq", "NGS"]
categories = ["science"]
repository = "https://github.com/Roco-scientist/NGS-Barcode-Count"

[[bin]]
name = "barcode-count"
test = false
bench = false
path = "src/main.rs"

[dependencies]
rayon = "1.5"
regex = "1.5"
clap = "2.33.0"
itertools = "0.10"
num_cpus = "1.0"
flate2 = "1"
chrono = "0.4"
custom_error = "1.9"
num-format = "0.4"
